cabal-version:      3.0
name:               monkey
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             itme-brain
maintainer:         bryan@ramos.codes
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lexer, Tokens
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, parsec
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite monkey-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        monkey
